<resources>
    <string name="app_name">Health Cal</string>
    <string name="bfpNametxt">Enter the name</string>
    <string name="bfpAgetxt">Enter the age</string>
    <string name="bfpWeighttxt">enter the weight</string>
    <string name="bfpHeighttxt">Enter the height</string>
    <string name="bfpNecktxt" />
    <string name="bfpWaisttxt" />
    <string name="bfpHiptxt" />
    <string name="bfpAbdomentxt" />
    <string name="bmiNametxt">Name</string>
    <string name="bmiAgetxt">Age</string>
    <string name="bmiWeighttxt">Weight(Kg)</string>
    <string name="bmiHeighttxt">Height(Cm)</string>
    <string name="thrCurrenttxt">Current heart rate</string>
    <string name="bfpName1txt">Name</string>
    <string name="bfpAge1txt">Age</string>
    <string name="bfpWeight1txt">Weight (Kg)</string>
    <string name="bfpHeight1txt">Height (Cm)</string>
    <string name="bfpNeckt1xt">Neck(Cm)</string>
    <string name="bfpWaist1txt">Waist(Cm)</string>
    <string name="bfpAbdomen1txt">Abdomen (Cm)</string>
    <string name="bfpHip1txt">Hip(Cm)</string>
    <string name="bfpAgenum">Age</string>
    <string name="bfpWeightdnum">Weight(kg)</string>
    <string name="bfpHeightdnum">Height(cm)</string>
    <string name="bfpneckdnum">Neck(cm)</string>
    <string name="bfpWaistdnum">Waist(cm)</string>
    <string name="bfpabdomendnum">Abdomen(cm)</string>
    <string name="bfpHipdnum">Hip(cm)</string>
    <string name="bmrNametxt">Name</string>
    <string name="bmrAgetxt">Age</string>
    <string name="bmrWeighttxt">Weight(kg)</string>
    <string name="bmrHeighttxt">Height(cm)</string>
    <string name="thrNametxt">Name</string>
    <string name="thrAgetxt">Age</string>
    <string name="BFPvaluetxt">BFP Value</string>
    <string name="BFPstatustxt">Status</string>
    <string name="BFPdestxt">Description</string>
    <string name="THRratetxt">HR</string>
    <string name="THRtzonetxt">Target Zone</string>
    <string name="THRhrtxt">HR</string>
    <string name="THRstatustxt">Status</string>
    <string name="THRlbtxt">Lower Bound</string>
    <string name="THRuptxt">Upper Bound</string>
    <string name="THRdestxt">Description</string>
    <string name="BMRvalue">BMR Value</string>
    <string name="BMRstatus">Status</string>
    <string name="BMRdes">Description</string>
    <string name="BMIvalue">BMI Value</string>
    <string name="BMRvaluetxt">BMR Value</string>
    <string name="BMRstatustxt">Status</string>
    <string name="BMRdestxt">Description</string>
    <string name="BMIvaluetxt">BMI Value</string>
    <string name="BMIstatustxt">Status</string>
    <string name="BMIdestxt">Description</string>
    <string name="BPFvaluetxt">BPF Value</string>
    <string name="BPFstatustxt">Status</string>
    <string name="BPFdestxt">Description</string>
    <string name="targetWeight">Target Weight</string>
    <string name="BMRvaluetxt1">BMR Value</string>
    <string name="BMRValtxt">BMR Value</string>
    <string name="xxxxxxx">xxxxxxxxx</string>

</resources>