<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BFP"
    tools:layout_editor_absoluteX="-46dp"
    tools:layout_editor_absoluteY="0dp">

    <EditText
        android:id="@+id/bfpHipdnum"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/bfpHipdnum"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpWaistdnum" />

    <EditText
        android:id="@+id/bfpWaistdnum"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/bfpWaistdnum"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpHeightdnum" />

    <TextView
        android:id="@+id/BMI"
        android:layout_width="297dp"
        android:layout_height="39dp"
        android:layout_marginTop="128dp"
        android:text="Body Fat Percentage (BFP)"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bfpNametxt"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/bfpName1txt"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMI" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="237dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgroup1">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="Male"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="263dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="Female"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="294dp" />
    </RadioGroup>

    <Button
        android:id="@+id/vrecordbfp"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFC107"
        android:onClick="onClickBFP_records"
        android:text="View Records"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculatebfp"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#FFC107"
        android:onClick="onClickview2"
        android:text="Calculate"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpHipdnum" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="onClickback2"
        app:backgroundTint="#FFC107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/ic_backbfp" />

    <TextView
        android:id="@+id/rgroup1"
        android:layout_width="70dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="Gender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpAgenum" />

    <EditText
        android:id="@+id/bfpAgenum"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/bfpAgenum"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpNametxt" />

    <EditText
        android:id="@+id/bfpWeightdnum"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/bfpWeightdnum"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/bfpHeightdnum"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/bfpHeightdnum"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpWeightdnum" />

    <EditText
        android:id="@+id/bfpneckdnum"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/bfpneckdnum"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpWaistdnum" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="496dp"
        android:layout_height="851dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bfpNametxt"
        app:layout_constraintVertical_bias="0.412"
        app:srcCompat="@drawable/bpf4" />


</androidx.constraintlayout.widget.ConstraintLayout>